--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
--r __pycache__
--r models/__pycache__
--r utils/__pycache__
--r .ipynb_checkpoints
--r *.DS_store
+__pycache__
+models/__pycache__
+utils/__pycache__
+.ipynb_checkpoints
+*.DS_store
 
